--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.23",
+    "@vuepress/plugin-revealjs": "^2.0.0-rc.108",
     "http-server": "^14.1.1",
     "sass-embedded": "^1.89.0",
     "typescript": "^5.8.3",
